// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> should render placeholders if forced to 1`] = `
<Image
  alt={null}
  backgroundColor="#f2f2f2"
  className=""
  classNameImg=""
  forcePlaceholder={true}
  highestResolutionLoaded={[Function]}
  lazy={true}
  onError={[Function]}
  onLoad={[Function]}
  ratio={null}
  resolutions={
    [
      {
        "height": 440,
        "width": 440,
      },
    ]
  }
  src="foo/bar"
  unwrapped={false}
>
  <div
    className="css-vfdozt common__image__container"
  />
</Image>
`;

exports[`<Image /> should render placeholders if src is null 1`] = `
<Image
  alt={null}
  backgroundColor="#f2f2f2"
  className=""
  classNameImg=""
  forcePlaceholder={false}
  highestResolutionLoaded={[Function]}
  lazy={true}
  onError={[Function]}
  onLoad={[Function]}
  ratio={null}
  resolutions={
    [
      {
        "height": 440,
        "width": 440,
      },
    ]
  }
  src="foo/bar"
  unwrapped={false}
>
  <div
    className="css-vfdozt common__image__container"
  >
    <ForwardRef
      alt={null}
      className=""
      lazy={true}
      onError={[Function]}
      onLoad={[Function]}
      src="foo/bar"
      style={
        {
          "aspectRatio": "1 / 1",
        }
      }
    >
      <img
        alt={null}
        aria-hidden={true}
        aria-label={null}
        className="css-ax9x1t common__image"
        data-test-id="image"
        loading="lazy"
        onError={[Function]}
        onLoad={[Function]}
        src="foo/bar"
        style={
          {
            "aspectRatio": "1 / 1",
          }
        }
      />
    </ForwardRef>
  </div>
</Image>
`;
